Reworking through algos?

--- a/CTCI.ipynb
+++ b/CTCI.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,18 +17,19 @@
     "import numpy as np\n",
     "from collections import deque\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d8c1a42d0534efead02a6ecb487ea7e",
+       "model_id": "c16829dfbad440e495dce3eff1a21cc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b9511bade8245b68ecacca0b9b244eb",
+       "model_id": "867b0c8b3f004a24adf7369bb1911b3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,21 +115,19 @@
     "    for key in char_dict.keys():\n",
     "        if char_dict[key] != 0:\n",
     "            return False\n",
-    "    return True\n",
-    "        \n",
-    "        \n",
+    "    return True  \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b1aa6c0d5d94a7d9f701da7a5ea526f",
+       "model_id": "85bd632593444e90b4fb735335b44251",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,69 +153,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-84a99df2e8c6>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-84a99df2e8c6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    @interact(str_in = 'happys'):\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "300fb21bebd246a49eb0ba90194b029a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='happys', description='str_in'), Output()), _dom_classes=('widget-interact',)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# 1.4\n",
-    "# The key here is to build a dict of the character values, then run through the \n",
-    "@interact(str_in = 'happys'):\n",
+    "# The key here is to build a dict of the character values, then run through the dict, checking to see that it meets palindrome conditions, those being:\n",
+    "# All characters except for one will appear an even number of times. A single character will appear an odd number of times. We can use a bool representation \n",
+    "# to signify the character appearances\n",
+    "@interact(str_in = 'happys')\n",
     "def check_palindrome(str_in):\n",
     "    \"\"\"\n",
     "    Returns true if the input string characters have a palindromic form, else returns False\n",
     "    \"\"\"\n",
     "    char_dict = {}\n",
     "    # O(n)\n",
-    "    for char in str_in_1:\n",
+    "    odd_chars=0 # Keep a counter for odd chars\n",
+    "    for char in str_in:\n",
     "        # O(1)\n",
-    "        if char in char_dict:\n",
+    "        if char == ' ':\n",
+    "            pass\n",
+    "        elif char in char_dict:\n",
     "            # O(1)\n",
-    "            char_dict[char]+=1\n",
+    "            if char_dict[char]:\n",
+    "                odd_chars-=1\n",
+    "            else:\n",
+    "                odd_chars +=1\n",
+    "            char_dict[char]= not char_dict[char]\n",
     "        else:\n",
     "            # O(1)\n",
-    "            char_dict[char] = 1"
+    "            char_dict[char] = True\n",
+    "            odd_chars +=1\n",
+    "        print(odd_chars)\n",
+    "    # Compute the counts within the hash map\n",
+    "    return [True if odd_chars<=1 else False][0] # Ensure there are "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c940a1a36c4846919d0b4575649793c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "[[4, 8, 12, 16], [3, 7, 11, 15], [2, 6, 10, 14], [1, 5, 9, 13]]"
+       "interactive(children=(Text(value='compressthisss', description='str_in'), Output()), _dom_classes=('widget-int…"
       ]
      },
-     "execution_count": 45,
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 1.6 \n",
+    "# Going to try a recursive strategy for this one\n",
+    "@interact(str_in = 'compressthisss')\n",
+    "def compression_wrapper(str_in):\n",
+    "    def recursive_string_compression(str_in, compressed, active_char, count):\n",
+    "        # Base case describing when to stop recursing\n",
+    "        if len(str_in)==0:\n",
+    "            return f'{compressed}{active_char}{count}'\n",
+    "        # If the active char is still active, increment the count, retain active_char\n",
+    "        if str_in[0]==active_char:\n",
+    "            return recursive_string_compression(str_in[1:], compressed, active_char, count+1)\n",
+    "        # Else update the compressed string and get the new active char\n",
+    "        else:\n",
+    "            return recursive_string_compression(str_in[1:], f'{compressed}{active_char}{count}', str_in[0], 1)\n",
+    "    return recursive_string_compression(str_in[1:], '', str_in[0], 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 0 swaps with 0, 3\n",
+      "0, 1 swaps with 1, 3\n",
+      "0, 2 swaps with 2, 3\n",
+      "0, 3 swaps with 3, 3\n",
+      "1, 0 swaps with 0, 2\n",
+      "1, 1 swaps with 1, 2\n",
+      "1, 2 swaps with 2, 2\n",
+      "1, 3 swaps with 3, 2\n",
+      "2, 0 swaps with 0, 1\n",
+      "2, 1 swaps with 1, 1\n",
+      "2, 2 swaps with 2, 1\n",
+      "2, 3 swaps with 3, 1\n",
+      "3, 0 swaps with 0, 0\n",
+      "3, 1 swaps with 1, 0\n",
+      "3, 2 swaps with 2, 0\n",
+      "3, 3 swaps with 3, 0\n",
+      "[4, 8, 12, 16]\n",
+      "[3, 7, 11, 15]\n",
+      "[2, 6, 10, 14]\n",
+      "[1, 5, 9, 13]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None]"
+      ]
+     },
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1.7 \n",
-    "# Transpose then flip over horizontal axis\n",
-    "# Lol I cant do this in place\n",
-    "\n",
+    "# Transpose then flip over horizontal axis is equivalent to a rotation by 90 deg counterclockwise\n",
+    "# Out of place\n",
     "def matrix_rotate(mat):\n",
     "    n = len(mat)\n",
     "    # Create new array\n",
     "    rotated = [[0]*n for _ in range(n)]\n",
+    "    # Fill with correct elements\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
+    "            print(f'{i}, {j} swaps with {j}, {n-1-i}')\n",
     "            rotated[i][j] = mat[j][(n-1)-i]\n",
     "    return rotated\n",
     "\n",
-    "matrix_rotate([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12], [13, 14, 15, 16]])\n"
+    "# Transpose then flip over horizontal axis is equivalent to a rotation by 90 deg counterclockwise\n",
+    "# In place, to conserve memory (only use 1 temporary buffer element)\n",
+    "def matrix_rotate(mat):\n",
+    "    n = len(mat)\n",
+    "    # Fill with correct elements\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            # This is going to go into rotate element at loc[i,j]\n",
+    "            temp = mat[j][(n-1)-i]\n",
+    "            # Get the element that will use loc[i,j] of initial array, and save this value\n",
+    "            \n",
+    "            mat[j][(n-1)-i] = \n",
+    "            \n",
+    "    return rotated\n",
+    "\n",
+    "[print(i) for i in matrix_rotate([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12], [13, 14, 15, 16]])]\n"
    ]
   },
   {
@@ -227,6 +325,50 @@
    "source": [
     "# 1.8 \n",
     "# Brute force -> O(M*N), via looking through all elements and performing the operations if 0 found\n",
+    "# Since its a matrix, we'll assume that the column elements are enumerable (eg list, not int)\n",
+    "def set_row_col_to_0(mat):\n",
+    "    for i in len(mat):\n",
+    "        for j in len(mat[0]):\n",
+    "            if mat[i,j]==0:\n",
+    "                for k in len(mat):\n",
+    "                    mat[k,j] = 0\n",
+    "                for k in len(mat[0]):\n",
+    "                    mat[i,k] = 0\n",
+    "    return mat\n",
+    "# Note that the above approach is the greater of O(M^2*N) or O(M*N^2) time complexity, and \n",
+    "# WOULDNT WORK\n",
+    "\n",
+    "# We can be smarter about eliminating options by using sets\n",
+    "def set_row_col_to_0(mat):\n",
+    "    zero_cols = {}\n",
+    "    zero_rows = {}\n",
+    "    for i in len(mat):\n",
+    "        for j in len(mat[0]):\n",
+    "            if mat[i,j]==0:\n",
+    "                zero_rows.add(i)\n",
+    "                zero_cols.add()\n",
+    "    for i in len(mat):\n",
+    "        for j in len(mat[0]):\n",
+    "            if i in zero_rows or j in zero_cols:\n",
+    "                mat[i,j]=0\n",
+    "    return mat\n",
+    "# Here, we have achieved O(M*N) time with O(M) or O(N) space complexity (whichever is greater)\n",
+    "\n",
+    "# We can achieve O(1) space complexity by using the matrices own rows/columns as the row/column store (from solutions)\n",
+    "def set_row_col_to_0(mat):\n",
+    "    zero_cols = {}\n",
+    "    zero_rows = {}\n",
+    "    for i in len(mat):\n",
+    "        for j in len(mat[0]):\n",
+    "            if mat[i,j]==0:\n",
+    "                zero_rows.add(i)\n",
+    "                zero_cols.add()\n",
+    "    for i in len(mat):\n",
+    "        for j in len(mat[0]):\n",
+    "            if i in zero_rows or j in zero_cols:\n",
+    "                mat[i,j]=0\n",
+    "    return mat\n",
+    "        \n",
     "# Better approach: Create enumerable of columns and rows, if 0 found, remove from column and row\n",
     "# Time efficiency? Not sure\n",
     "\n",
@@ -279,7 +421,6 @@
     "    # Quick check for O(1)\n",
     "    if len(s1)!=len(s2):\n",
     "        return False\n",
-    "    # Somewhat recursive through string compares\n",
     "    for i in range(len(s2)):\n",
     "        print(s2[i])\n",
     "        # Cost is O(1)\n",
@@ -757,9 +898,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "interactive_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "interactive_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
